Enhance CookieAuthenticator for better cookie parsing
Refactor CookieAuthenticator to support multiple cookie formats and improve error handling.